Added another set of function

--- a/FullStackDeveloper.ipynb
+++ b/FullStackDeveloper.ipynb
@@ -27,7 +27,7 @@
     "#from allFunction import *\n",
     "import sys\n",
     "sys.path.append('./scripts')\n",
-    "import allFunction as af"
+    "import scraper as af"
    ]
   },
   {
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "for n in range(85,1000):\n",
+    "for n in range(112,1000):\n",
     "    # Get the page where all the href link are available\n",
     "    page = af.extractJobListPage(\"Full Stack Developer\", n)\n",
     "    # Get all the links and put into an List\n",
