--- a/Report.ipynb
+++ b/Report.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Project Option #4\n",
-    "## Scraping a job website and data analysis to find out sought after skills"
+    "## Scraping a job website and data analysis to find out sought after skills each job title"
    ]
   },
   {
@@ -13,8 +13,8 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "(introduction here)\n",
-    "I chose this option out of other because I'm finding co-op jobs myself and I always wanted to create a web scraper. Web scraper has his own huge community and widely used to scrape data off the website. I want to see the comparsion between the hard skills require between five job title.\n",
+    "\n",
+    "I chose this option because I'm finding co-op jobs and I always wanted to create a web scraper. Web scraper has a huge community and is widely used to scrape data off the website. I want to see the comparison between the technical skills require between five job titles.\n",
     "\n",
     "The job titles are as follow:\n",
     "- Full Stack Developer\n",
@@ -25,12 +25,20 @@
     "\n",
     "Why I chose these job titles?\n",
     "\n",
-    "Software Developer is most generalized out of all the job title. So, I wanted to see what are the technical skill compare to other job title.\n",
-    "Data Analyst and Data Scientist are from the same field but Data Scientist asks for more skills which are mathematical and statistical.\n",
+    "Software Developer is the most generalized out of all the job titles. So, I wanted to see what are the technical skill compare to other job titles.\n",
+    "Data Analyst and Data Scientist are from the same field but Data Scientist asks for more skills.\n",
     "The difference between Full Stack Developer and Front End Developer is that Front End Developers do not have to concentrate on the back end development.\n",
-    "As you can see I have chose one generalized job, two from data science field and other two from web development field.\n",
+    "As you can see I have chosen one generalized job, two from the data science field and the other two from the web development field.\n",
     "\n",
-    "(5 job title, 7000+ jobs scrapered)"
+    "I have build a web scraper and scraped 7000+ job across five job titles. It was diffculit to push near 10000+ jobs as there were not many job posting on indeed. The location I chose was whole USA as they had many job posting.\n",
+    "\n",
+    "The scraper can be found in \"jobScraper.ipynb\"\n",
+    "\n",
+    "<img src=\"JobScraper.png\"\n",
+    "     alt=\"dfd\"\n",
+    "     width = 800px\n",
+    "     height = 400px\n",
+    "     style=\"float: left; margin-right: 10px;\" />\n"
    ]
   },
   {
@@ -77,33 +85,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we will preprocess the description of all the data frame\n",
-    "# EDA:\n",
-    "# create word cloud diagram (Tell how there so much noise)\n",
-    "# get the count frequency and idtdf\n",
-    "# take out all the hard skills for analysis\n",
-    "# Analysis:\n",
-    "# If possible find the duplicates\n",
-    "# Give hypothesis\n",
-    "# calculate the document similarity\n",
-    "# Conclusion:"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis (EDA)\n",
     "\n",
-    "In EDA, I'm just exploring my scaper data and I will also be calculating the count frequency which will get me the number of time a word as occur and also idtdf.\n",
-    "# explain tdidf\n",
-    "# (before counting count frequency and idtdf join the description and make it a whole sting)\n",
-    "I will be processing all the job description to remove all the stop words and punctation. The description will also go through Porter Stemming algorithm to descrease the over noise of the description. This is help in find the relevant info by removing the unnessary words."
+    "In EDA, I'm just exploring my scaper data and I will also be calculating the count frequency which will get me the number of times a word occurs and also tfidf.\n",
+    "\n",
+    "Term Frequency-Inverse Document Frequency (tfidf) is used to give weight to the words which are less occurring in the document, these weights help figure out how important a word is in a document.\n",
+    "\n",
+    "I will be processing all the job descriptions to remove all the stop words and punctuation. The description will also go through the Porter Stemming algorithm to decrease the overall noise of the description. This helps in finding the relevant info by removing unnecessary words."
    ]
   },
   {
@@ -271,9 +262,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see this is not helpful beacause we required the technical skills such as HTML, CSS and etc. Even though the preprocessing was code in a way that it gets the description after the words \"Qualification(s)\" or \"Requirement(s)\". It was not enough measure to get the technical skills.\n",
+    "As we can see this is not helpful because we required technical skills such as HTML, CSS, etc. Even though the preprocessing was coded in a way that it gets the description after the words \"Qualification(s)\" or \"Requirement(s)\". It was not enough to measure to get only the relevant technical skills.\n",
     "\n",
-    "Now, I will be calculating count frequency and idtdf."
+    "Now, I will be calculating count frequency and tfidf."
    ]
   },
   {
@@ -1316,7 +1307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see there is too much noise while calculating the count Frequency and iftdf. Therefore, I have come up with a naive solution. I'm going to create a general list of hard and grab those hard skills' count Frequency and idtdf."
+    "As we can see there is too much noise while calculating the count Frequency and tfidf. Therefore, I have come up with a naive solution. I'm going to create a general list of technical skills and grab those technical skills' count Frequency and tfidf."
    ]
   },
   {
@@ -2313,34 +2304,47 @@
    "source": [
     "# Analysis\n",
     "\n",
-    "As we know the all desired technical skills for each of the job title, we will put each technical skill and the count into a vector form before that will make sure all the job title has the same technical skills. If one of the technical skill exists for one job title and not for the other then that technical skill will have a count of 0. This will make sure the result is accurate and fair. In the end, we will calculate document similarity between all the job title.\n",
+    "As we know the all desired technical skills for each job title, we will put each technical skill and the count into a vector form before that will make sure all the job title has the same technical skills. If one of the technical skills exists for one job title and not for the other then that technical skill will have a count of 0. This will make sure the result is accurate and fair. In the end, we will calculate the cosine similarity between all the job titles.\n",
     "\n",
     "### Hypothesis\n",
     "\n",
-    "- As Data Analyst and Data Science are from the same field, they will have higher similarity score.\n",
-    "- Same goes for Full Stack Developer and Front End Developer.\n",
-    "- I also think the similarity between Software Developer and Full Stack Developer will be high.\n",
-    "- While the data field jobs will have a low similarity with Software Developer, Full Stack Developer and Front End Developer"
+    "1. As Data Analyst and Data Scientist are from the same field, they will have higher similarity score.\n",
+    "2. Same goes for Full Stack Developer and Front End Developer.\n",
+    "3. I also think the similarity between Software Developer and Full Stack Developer will be high.\n",
+    "4. While the data field jobs will have a low similarity with Software Developer, Full Stack Developer and Front End Developer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.84332528]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The cosine similarity between Data Analyst and Data Scientist is [[0.84332528]]\n",
+      "2. The cosine similarity between Full Stack Developer and Front End Developer is [[0.87813991]]\n",
+      "3. The cosine similarity between Software Developer and Full Stack Developer is [[0.96341056]]\n",
+      "4(a). The cosine similarity between Data Analyst and Software Developer is [[0.59554784]]\n",
+      "4(b). The cosine similarity between Data Analyst and Full Stack Developer is [[0.47410503]]\n",
+      "4(c). The cosine similarity between Data Analyst and Front End Developer is [[0.30009074]]\n",
+      "4(d). The cosine similarity between Data Scientist and Software Developer is [[0.620739]]\n",
+      "4(e). The cosine similarity between Data Scientist and Full Stack Developer is [[0.54462613]]\n",
+      "4(f). The cosine similarity between Data Scientist and Front End Developer is [[0.28354624]]\n"
+     ]
     }
    ],
    "source": [
-    "mf.getCosineSim(hs_cf_da, hs_cf_ds)"
+    "print(f\"1. The cosine similarity between Data Analyst and Data Scientist is {mf.getCosineSim(hs_cf_da, hs_cf_ds)}\")\n",
+    "print(f\"2. The cosine similarity between Full Stack Developer and Front End Developer is {mf.getCosineSim(hs_cf_fsd, hs_cf_fed)}\")\n",
+    "print(f\"3. The cosine similarity between Software Developer and Full Stack Developer is {mf.getCosineSim(hs_cf_sd, hs_cf_fsd)}\")\n",
+    "print(f\"4(a). The cosine similarity between Data Analyst and Software Developer is {mf.getCosineSim(hs_cf_da, hs_cf_sd)}\")\n",
+    "print(f\"4(b). The cosine similarity between Data Analyst and Full Stack Developer is {mf.getCosineSim(hs_cf_da, hs_cf_fsd)}\")\n",
+    "print(f\"4(c). The cosine similarity between Data Analyst and Front End Developer is {mf.getCosineSim(hs_cf_da, hs_cf_fed)}\")\n",
+    "print(f\"4(d). The cosine similarity between Data Scientist and Software Developer is {mf.getCosineSim(hs_cf_ds, hs_cf_sd)}\")\n",
+    "print(f\"4(e). The cosine similarity between Data Scientist and Full Stack Developer is {mf.getCosineSim(hs_cf_ds, hs_cf_fsd)}\")\n",
+    "print(f\"4(f). The cosine similarity between Data Scientist and Front End Developer is {mf.getCosineSim(hs_cf_ds, hs_cf_fed)}\")"
    ]
   },
   {
@@ -2348,6 +2352,16 @@
    "metadata": {},
    "source": [
     "# Conclusion "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As you can see my first hypothesis was correct, Data Analyst and Data Scientist has a high cosine similarity. Therefore, they have similar technical skill which are desired from the employers/job posters.\n",
+    "- My second hypothesis was also correct, Full Stack Developer and Front End Developer has a high cosine similarity.\n",
+    "- My third hypothesis was also correct, Software Developer and Full Stack Developer has a high cosine similarity.\n",
+    "- In my fourth hypothesis, Data Analyst and Data Scientists had an similarity close to **0.6** with Software Developer and **0.5** with Full Stack Developer which is not low. The data field jobs and front-end developer had a low similarity close to **0.3**. Therefore, my fourth hypothesis was partly correct."
    ]
   },
   {
